--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         input, button { width: 100%; box-sizing: border-box; padding: 10px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc; }
         button { background: #1a73e8; color: #fff; cursor: pointer; border: none; font-weight: 600; }
         button:hover { background: #155ea6; }
-        .hidden { display: none; }
+        .hidden { display: none !important; } /* <-- THIS IS THE FIX */
         .drag-cloud { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 10px; padding: 10px; border: 1px dashed #ccc; border-radius: 6px; min-height: 40px; }
         .drag-item { padding: 8px 12px; background: #eee; border-radius: 6px; cursor: grab; user-select: none; }
         #qr-drop-zone { border: 2px dashed #ccc; padding: 20px; text-align: center; color: #888; margin-bottom: 15px; }
@@ -191,9 +191,7 @@
             singleCodeInterval = setInterval(update, 1000);
         } catch (e) { alert("Invalid secret key format."); }
     }
-
-    // --- All QR Code Functions (drag/drop, camera) remain the same as the previous version ---
-    // (Code omitted for brevity, but it is present and correct in the provided HTML file)
+    
     const dropZone = document.getElementById('qr-drop-zone');
     dropZone.addEventListener('dragover', (e) => { e.preventDefault(); dropZone.style.borderColor = '#1a73e8'; });
     dropZone.addEventListener('dragleave', () => { dropZone.style.borderColor = '#ccc'; });
@@ -266,7 +264,6 @@
             generateCode();
         } catch (e) { alert("Could not parse the QR code as a valid TOTP key."); }
     }
-
 </script>
 </body>
 </html>
