--- a/encrypter.html
+++ b/encrypter.html
@@ -14,28 +14,37 @@
         legend { font-weight: 600; color: #1a73e8; padding: 0 10px; }
         input { width: 100%; box-sizing: border-box; padding: 10px; margin-bottom: 10px; border-radius: 6px; border: 1px solid #ccc; }
         button { background: #1a73e8; color: #fff; cursor: pointer; border: none; font-weight: 600; padding: 12px 20px; border-radius: 6px; }
+        button:hover { background: #155ea6; }
+        .input-group { display: flex; gap: 10px; align-items: center; }
         .drag-area { display: flex; gap: 20px; margin-top: 10px; }
         .drag-column { flex: 1; background: #f9f9f9; padding: 10px; border: 1px dashed #ccc; border-radius: 6px; min-height: 80px; }
         .drag-column h4 { margin: 0 0 10px 0; text-align: center; color: #555; }
         .drag-item { padding: 8px; background: #e0e0e0; border-radius: 4px; cursor: grab; margin-bottom: 5px; }
+        #secrets-list { list-style: none; padding: 0; margin-top: 10px; }
+        #secrets-list li { background: #eee; padding: 8px; border-radius: 4px; margin-bottom: 5px; display: flex; justify-content: space-between; align-items: center; word-break: break-all; }
+        #secrets-list button { background: #dc3545; font-size: 12px; padding: 4px 8px; flex-shrink: 0; margin-left: 10px; }
     </style>
 </head>
 <body>
 <div class="container">
     <h1>Authenticator Setup</h1>
+    <a href="index.html" style="text-align:center; display:block; margin-bottom:20px;">Go to Authenticator</a>
+
     <fieldset>
         <legend>1. Master Password</legend>
         <input type="password" id="password" placeholder="Create the master password">
     </fieldset>
+
     <fieldset>
         <legend>2. Your TOTP Secrets</legend>
-        <div style="display:flex; gap:10px;">
+        <div class="input-group">
             <input type="text" id="secret-label" placeholder="Label (e.g., Google)">
             <input type="text" id="secret-key" placeholder="Secret Key">
             <button onclick="addSecret()">Add</button>
         </div>
-        <ul id="secrets-list" style="list-style:none;padding:0;"></ul>
+        <ul id="secrets-list"></ul>
     </fieldset>
+
     <fieldset>
         <legend>3. Unlock Puzzles</legend>
         <h4>Puzzle 1: Unlock Main App</h4>
@@ -44,14 +53,14 @@
             <div id="main-available" class="drag-column"><h4>Available Words</h4></div>
             <div id="main-order" class="drag-column"><h4>Correct Order (drag a few here)</h4></div>
         </div>
-        <hr style="margin:20px 0;">
+        <hr style="margin: 20px 0;">
         <h4>Puzzle 2: Unlock Rolling Codes Vault</h4>
         <input type="text" id="rolling-input" placeholder="Type a word and press Enter">
         <div class="drag-area">
             <div id="rolling-available" class="drag-column"><h4>Available Words</h4></div>
             <div id="rolling-order" class="drag-column"><h4>Correct Order</h4></div>
         </div>
-        <hr style="margin:20px 0;">
+        <hr style="margin: 20px 0;">
         <h4>Puzzle 3: Unlock Raw Keys Vault</h4>
         <input type="text" id="raw-input" placeholder="Type a word and press Enter">
         <div class="drag-area">
@@ -59,10 +68,14 @@
             <div id="raw-order" class="drag-column"><h4>Correct Order</h4></div>
         </div>
     </fieldset>
+
     <button onclick="generateAndDownload()" style="width:100%;">Generate & Download Encrypted File</button>
 </div>
+
 <script>
     const secrets = [];
+
+    // --- PUZZLE SETUP ---
     ['main', 'rolling', 'raw'].forEach(type => {
         new Sortable(document.getElementById(`${type}-available`), { group: type, animation: 150 });
         new Sortable(document.getElementById(`${type}-order`), { group: type, animation: 150 });
@@ -81,7 +94,51 @@
             }
         });
     });
-    function addSecret() { /* UI code unchanged */ }
+
+    // --- SECRET MANAGEMENT FUNCTIONS (RESTORED) ---
+    const secretLabelInput = document.getElementById('secret-label');
+    const secretKeyInput = document.getElementById('secret-key');
+
+    function addSecret() {
+        const label = secretLabelInput.value.trim();
+        const key = secretKeyInput.value.trim().replace(/\s+/g, '').toUpperCase();
+
+        if (!label || !key) {
+            alert('Both label and key are required.');
+            return;
+        }
+
+        secrets.push({ label, key });
+        renderSecrets();
+        secretLabelInput.value = '';
+        secretKeyInput.value = '';
+        secretLabelInput.focus(); // Set focus back to the first input for easy chaining
+    }
+
+    function removeSecret(index) {
+        secrets.splice(index, 1);
+        renderSecrets();
+    }
+
+    function renderSecrets() {
+        const list = document.getElementById('secrets-list');
+        list.innerHTML = '';
+        secrets.forEach((s, i) => {
+            const li = document.createElement('li');
+            li.innerHTML = `<span><strong>${s.label}:</strong> ${s.key}</span> <button onclick="removeSecret(${i})">Remove</button>`;
+            list.appendChild(li);
+        });
+    }
+
+    // --- ADD ENTER KEY FUNCTIONALITY (NEW) ---
+    secretKeyInput.addEventListener('keydown', e => {
+        if (e.key === 'Enter') {
+            e.preventDefault();
+            addSecret();
+        }
+    });
+
+    // --- DATA GATHERING AND ENCRYPTION ---
     function getPuzzleData(type) {
         const available = [...document.querySelectorAll(`#${type}-available .drag-item`)];
         const ordered = [...document.querySelectorAll(`#${type}-order .drag-item`)];
@@ -89,6 +146,7 @@
         const order = ordered.map(el => el.textContent);
         return { cloud: allItems, order: order };
     }
+
     function generateAndDownload() {
         const password = document.getElementById('password').value;
         if (!password) { alert('Master password is required.'); return; }
@@ -109,13 +167,12 @@
 
         // --- VAULT 2: ROLLING CODES VAULT ---
         const rollingVaultKey = CryptoJS.PBKDF2(password, rollingPuzzle.order.join(''), { keySize: 256/32, iterations: 1000 });
-        const rollingVaultData = { secrets: secrets };
-        const encryptedRollingVault = CryptoJS.AES.encrypt(JSON.stringify(rollingVaultData), rollingVaultKey.toString()).toString();
+        const secretsData = { secrets: secrets }; // Secrets data is the same for both vaults
+        const encryptedRollingVault = CryptoJS.AES.encrypt(JSON.stringify(secretsData), rollingVaultKey.toString()).toString();
 
         // --- VAULT 3: RAW KEYS VAULT ---
         const rawVaultKey = CryptoJS.PBKDF2(password, rawPuzzle.order.join(''), { keySize: 256/32, iterations: 1000 });
-        const rawVaultData = { secrets: secrets }; // Same data, different lock
-        const encryptedRawVault = CryptoJS.AES.encrypt(JSON.stringify(rawVaultData), rawVaultKey.toString()).toString();
+        const encryptedRawVault = CryptoJS.AES.encrypt(JSON.stringify(secretsData), rawVaultKey.toString()).toString();
 
         const finalJson = {
             mainPuzzleWords: mainPuzzle.cloud,
