--- a/encrypter.html
+++ b/encrypter.html
@@ -17,14 +17,17 @@
         button:hover { background: #155ea6; }
         button.secondary { background-color: #6c757d; }
         button.secondary:hover { background-color: #5a6268; }
+        .hidden { display: none; }
         .input-group { display: flex; gap: 10px; align-items: center; }
         .drag-area { display: flex; gap: 20px; margin-top: 10px; }
         .drag-column { flex: 1; background: #f9f9f9; padding: 10px; border: 1px dashed #ccc; border-radius: 6px; min-height: 80px; }
         .drag-column h4 { margin: 0 0 10px 0; text-align: center; color: #555; }
-        .drag-item { padding: 8px; background: #e0e0e0; border-radius: 4px; cursor: grab; margin-bottom: 5px; }
+        .drag-item { padding: 8px 12px; background: #e0e0e0; border-radius: 4px; cursor: grab; margin-bottom: 5px; display: flex; justify-content: space-between; align-items: center; }
+        .remove-btn { margin-left: 10px; cursor: pointer; color: #999; font-weight: bold; }
+        .remove-btn:hover { color: #333; }
         #secrets-list { list-style: none; padding: 0; margin-top: 10px; }
-        #secrets-list li { background: #eee; padding: 8px; border-radius: 4px; margin-bottom: 5px; display: flex; justify-content: space-between; align-items: center; word-break: break-all; }
-        #secrets-list button { background: #dc3545; font-size: 12px; padding: 4px 8px; flex-shrink: 0; margin-left: 10px; }
+        #secrets-list li { background: #eee; padding: 8px 12px; border-radius: 4px; margin-bottom: 5px; display: flex; justify-content: space-between; align-items: center; word-break: break-all; }
+        #secrets-list button { background: #dc3545; font-size: 12px; padding: 4px 8px; flex-shrink: 0; margin-left: 10px; width: auto; }
     </style>
 </head>
 <body>
@@ -36,21 +39,34 @@
     <fieldset><legend>2. Your TOTP Secrets</legend><div class="input-group"><input type="text" id="secret-label" placeholder="Label (e.g., Google)"><input type="text" id="secret-key" placeholder="Secret Key"><button onclick="addSecret()">Add</button></div><ul id="secrets-list"></ul></fieldset>
     <fieldset><legend>3. Unlock Puzzles</legend><h4>Puzzle 1: Unlock Main App</h4><input type="text" id="main-input" placeholder="Type a word and press Enter"><div class="drag-area"><div id="main-available" class="drag-column"><h4>Available Words</h4></div><div id="main-order" class="drag-column"><h4>Correct Order</h4></div></div><hr style="margin:20px 0;"><h4>Puzzle 2: Unlock Rolling Codes Vault</h4><input type="text" id="rolling-input" placeholder="Type a word and press Enter"><div class="drag-area"><div id="rolling-available" class="drag-column"><h4>Available Words</h4></div><div id="rolling-order" class="drag-column"><h4>Correct Order</h4></div></div><hr style="margin:20px 0;"><h4>Puzzle 3: Unlock Raw Keys Vault</h4><input type="text" id="raw-input" placeholder="Type a word and press Enter"><div class="drag-area"><div id="raw-available" class="drag-column"><h4>Available Words</h4></div><div id="raw-order" class="drag-column"><h4>Correct Order</h4></div></div></fieldset>
     
-    <button onclick="generateJson()">1. Generate JSON</button>
+    <button onclick="generateJson()">Generate JSON</button>
     
     <div id="output-area" class="hidden">
         <h3>Generated JSON Output</h3>
         <textarea id="jsonOutput" readonly rows="8"></textarea>
         <div style="display:flex; gap: 10px;">
-            <button onclick="copyJson()" class="secondary" style="width:50%;">2. Copy JSON</button>
-            <button onclick="downloadJson()" class="secondary" style="width:50%;">3. Download File</button>
+            <button onclick="copyJson()" class="secondary" style="width:50%;">Copy JSON</button>
+            <button onclick="downloadJson()" class="secondary" style="width:50%;">Download File</button>
         </div>
     </div>
 </div>
 
 <script>
-    const secrets = [];
+    let secrets = [];
     let generatedJsonCache = null;
+
+    // --- PUZZLE ITEM CREATION (NOW WITH REMOVE BUTTON) ---
+    function createPuzzleItem(value) {
+        const item = document.createElement('div');
+        item.className = 'drag-item';
+        item.textContent = value;
+        const removeBtn = document.createElement('span');
+        removeBtn.className = 'remove-btn';
+        removeBtn.innerHTML = '&times;'; // 'x' symbol
+        removeBtn.onclick = () => item.remove();
+        item.appendChild(removeBtn);
+        return item;
+    }
 
     ['main', 'rolling', 'raw'].forEach(type => {
         new Sortable(document.getElementById(`${type}-available`), { group: type, animation: 150 });
@@ -61,9 +77,7 @@
                 e.preventDefault();
                 const value = input.value.trim();
                 if (value) {
-                    const item = document.createElement('div');
-                    item.className = 'drag-item';
-                    item.textContent = value;
+                    const item = createPuzzleItem(value);
                     document.getElementById(`${type}-available`).appendChild(item);
                     input.value = '';
                 }
@@ -71,18 +85,27 @@
         });
     });
 
+    // --- SECRET MANAGEMENT (NOW COMPLETE) ---
     const secretLabelInput = document.getElementById('secret-label');
     const secretKeyInput = document.getElementById('secret-key');
 
-    function addSecret() {
-        const label = secretLabelInput.value.trim();
-        const key = secretKeyInput.value.trim().replace(/\s+/g, '').toUpperCase();
-        if (!label || !key) { alert('Both label and key are required.'); return; }
-        secrets.push({ label, key });
+    function addSecret(label, key) {
+        const finalLabel = label || secretLabelInput.value.trim();
+        const finalKey = (key || secretKeyInput.value.trim()).replace(/\s+/g, '').toUpperCase();
+
+        if (!finalLabel || !finalKey) {
+            alert('Both label and key are required.');
+            return;
+        }
+
+        secrets.push({ label: finalLabel, key: finalKey });
         renderSecrets();
-        secretLabelInput.value = '';
-        secretKeyInput.value = '';
-        secretLabelInput.focus();
+
+        if (!label && !key) { // only clear if not prefilling
+            secretLabelInput.value = '';
+            secretKeyInput.value = '';
+            secretLabelInput.focus();
+        }
     }
 
     function removeSecret(index) {
@@ -95,24 +118,42 @@
         list.innerHTML = '';
         secrets.forEach((s, i) => {
             const li = document.createElement('li');
-            li.innerHTML = `<span><strong>${s.label}:</strong></span> <button onclick="removeSecret(${i})">Remove</button>`;
+            li.innerHTML = `<span><strong>${s.label}</strong></span> <button onclick="removeSecret(${i})">Remove</button>`;
             list.appendChild(li);
         });
     }
 
     secretKeyInput.addEventListener('keydown', e => {
-        if (e.key === 'Enter') {
-            e.preventDefault();
-            addSecret();
+        if (e.key === 'Enter') { e.preventDefault(); addSecret(); }
+    });
+
+    // --- PREFILL FUNCTIONALITY ---
+    document.addEventListener('DOMContentLoaded', () => {
+        // Prefill password
+        document.getElementById('password').value = 'password123';
+
+        // Prefill secrets
+        addSecret('Google', 'JBSWY3DPEHPK3PXP');
+        addSecret('GitHub', 'NBZXIY3OMVZGKYLTMNSTGIDC');
+
+        // Prefill puzzles
+        const puzzles = {
+            main: { available: ['Apple', 'Grape', 'Orange'], order: ['Banana', 'Cherry'] },
+            rolling: { available: ['Lion', 'Wolf'], order: ['Tiger', 'Bear'] },
+            raw: { available: ['Honda', 'BMW'], order: ['Ford', 'Tesla'] }
+        };
+        for (const [type, data] of Object.entries(puzzles)) {
+            data.available.forEach(word => document.getElementById(`${type}-available`).appendChild(createPuzzleItem(word)));
+            data.order.forEach(word => document.getElementById(`${type}-order`).appendChild(createPuzzleItem(word)));
         }
     });
 
-    // THIS FUNCTION WAS MISSING, CAUSING THE BUTTON TO FAIL. IT IS NOW RESTORED.
+    // --- DATA GATHERING AND ENCRYPTION (NOW COMPLETE) ---
     function getPuzzleData(type) {
         const available = [...document.querySelectorAll(`#${type}-available .drag-item`)];
         const ordered = [...document.querySelectorAll(`#${type}-order .drag-item`)];
-        const allItems = [...available, ...ordered].map(el => el.textContent);
-        const order = ordered.map(el => el.textContent);
+        const allItems = [...available, ...ordered].map(el => el.textContent.slice(0, -2).trim()); // Remove ' ×'
+        const order = ordered.map(el => el.textContent.slice(0, -2).trim()); // Remove ' ×'
         return { cloud: allItems, order: order };
     }
 
@@ -154,10 +195,8 @@
     }
 
     function copyJson() {
-        const output = document.getElementById('jsonOutput');
-        output.select();
-        navigator.clipboard.writeText(output.value);
-        alert('JSON copied to clipboard!');
+        if (!generatedJsonCache) { alert('Please generate the JSON first.'); return; }
+        navigator.clipboard.writeText(generatedJsonCache).then(() => alert('JSON copied to clipboard!'));
     }
 
     function downloadJson() {
